--- a/Ola.css
+++ b/Ola.css
@@ -1,1 +1,67 @@
+header {
+  background-color:#f1f1f1;
+  text-align: center;
+  line-height: 75px;
+  font-size: 50px;
+  font-weight: bold;
+  color:#005ea1;
+  padding: 10px;}
 
+ul.topnav {
+  display: flex;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  background-color: #f1f1f1;
+  justify-content:center;}
+
+ul.topnav li a {
+  display: block;
+  color: #515151;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-weight: bold;}
+
+ul.topnav li a:hover {
+  background-color:#515151;
+  color:#f1f1f1;}
+
+.flex-container {
+    display: flex;
+  flex-wrap: wrap;
+  justify-content: center;}
+
+.flex-container > div {
+  background-color: #f1f1f1;
+  width: 500px;
+  margin: 10px;
+  text-align: center;
+  line-height: 75px;
+  font-size: 30px;
+  color:#515151;}
+
+h1 {font-size:xx-large;
+color: #f1f1f1;
+text-align: center;}
+p {text-align: center;
+font-size: x-large;
+text-decoration-style: solid;
+color:#f1f1f1;}
+
+img {
+  display: block;
+  margin: auto;
+  width: 30%;
+  clip-path:circle(50%);}
+
+body{background-color:#6ba7d1;
+font-family: Georgia, 'Times New Roman', Times, serif;}
+
+.flex-container > div {
+  background-color: #f1f1f1;
+  width: 500px;
+  margin: 10px;
+  text-align: center;
+  line-height: 50px;
+  font-size: 20px;
+  text-align: center; }
