--- a/Ola.css
+++ b/Ola.css
@@ -4,7 +4,7 @@ header {
   line-height: 75px;
   font-size: 50px;
   font-weight: bold;
-  color:#005ea1;
+  color:#4ba100;
   padding: 10px;}
 
 ul.topnav {
