--- a/Ola.css
+++ b/Ola.css
@@ -1,67 +1,45 @@
-header {
-  background-color:#f1f1f1;
-  text-align: center;
-  line-height: 75px;
-  font-size: 50px;
-  font-weight: bold;
-  color:#4ba100;
-  padding: 10px;}
+/* ===== Ola.css (enkel versjon) ===== */
 
-ul.topnav {
-  display: flex;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  background-color: #f1f1f1;
-  justify-content:center;}
+/* Bakgrunn og generelt */
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f2f5f9;
+    color: #333;
+    margin: 0;
+    padding: 20px;
+    text-align: center;
+}
 
-ul.topnav li a {
-  display: block;
-  color: #515151;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-weight: bold;}
+/* Overskrift */
+h1 {
+    color: #2c3e50;
+}
 
-ul.topnav li a:hover {
-  background-color:#515151;
-  color:#f1f1f1;}
+/* Avsnitt */
+p {
+    font-size: 18px;
+}
 
+/* Flex-container */
 .flex-container {
     display: flex;
-  flex-wrap: wrap;
-  justify-content: center;}
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+    margin-top: 20px;
+}
 
-.flex-container > div {
-  background-color: #f1f1f1;
-  width: 500px;
-  margin: 10px;
-  text-align: center;
-  line-height: 75px;
-  font-size: 30px;
-  color:#515151;}
+.flex-container div {
+    background: #ffffff;
+    border: 1px solid #ddd;
+    padding: 12px;
+    border-radius: 8px;
+    width: 250px;
+}
 
-h1 {font-size:xx-large;
-color: #f1f1f1;
-text-align: center;}
-p {text-align: center;
-font-size: x-large;
-text-decoration-style: solid;
-color:#f1f1f1;}
-
+/* Bilde */
 img {
-  display: block;
-  margin: auto;
-  width: 30%;
-  clip-path:circle(50%);}
-
-body{background-color:#6ba7d1;
-font-family: Georgia, 'Times New Roman', Times, serif;}
-
-.flex-container > div {
-  background-color: #f1f1f1;
-  width: 500px;
-  margin: 10px;
-  text-align: center;
-  line-height: 50px;
-  font-size: 20px;
-  text-align: center; }
+    margin-top: 20px;
+    width: 300px;
+    border-radius: 10px;
+}
