--- a/Ola.css
+++ b/Ola.css
@@ -34,8 +34,8 @@ h1 {
 
 /* Bilde */
 img {
-    margin-top: 20px;
+    margin-top: 30px;
     width: 300px;
     border-radius: 10px;
-    border: 3px solid #fce300; /* gul outline */
+    border: 3px solid #fce300; /* gul utringning */
 }
