--- a/Ola.css
+++ b/Ola.css
@@ -2,7 +2,7 @@
 
 /* Bakgrunn og tekst */
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     background-color: #c70101; /* rød */
     color: #fff;
     text-align: center;
