--- a/Ola.css
+++ b/Ola.css
@@ -15,6 +15,32 @@ h1 {
     color: #fce300; /* gul */
 }
 
+/* Navigasjonsmeny */
+.topnav {
+    list-style-type: none;
+    padding: 0;
+    margin: 0 0 20px;
+    background-color: #000;
+    overflow: hidden;
+}
+
+.topnav li {
+    display: inline;
+}
+
+.topnav a {
+    color: #fce300;
+    text-decoration: none;
+    padding: 12px 16px;
+    display: inline-block;
+}
+
+.topnav a:hover {
+    background-color: #fce300;
+    color: #000;
+}
+
+
 /* Flex-boksene */
 .flex-container {
     display: flex;
